tests/ui/impl-trait/recursive-bound-eval.current.stderr
error[E0282]: type annotations needed
  --> $DIR/recursive-bound-eval.rs:18:28
   |
LL |     move || recursive_fn().parse()
   |                            ^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
